--- a/locale/core.yml
+++ b/locale/core.yml
@@ -218,7 +218,7 @@ core:
       log_in_link: => core.ref.log_in
       log_out_button: => core.ref.log_out
       profile_button: الملف الشخصى
-      search_placeholder: البحث فى المنتدى
+      search_placeholder: البحث فى النقاشات
       settings_button: => core.ref.settings
       sign_up_link: => core.ref.sign_up
 
